milligram dependency added for css, build of less file will include it

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "learn irregular german verbs",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "milligram": "^1.1.0"
+  },
   "devDependencies": {
     "elm": "^0.17.1",
     "http-server": "^0.9.0",
