--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/tju/verben"
+    "url": "https://github.com/tju/verben.ninja"
   },
   "keywords": [
     "elm"
